bunx expo install expo-audio

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "~53.0.13",
+    "expo-audio": "~0.4.9",
     "expo-blur": "~14.1.5",
     "expo-constants": "^17.1.7",
     "expo-font": "~13.3.1",
