--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@rn-primitives/accordion": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
     "@rn-primitives/switch": "^1.2.0",
     "better-auth": "^1.3.7",
@@ -35,6 +36,7 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.9",
     "expo-web-browser": "^14.2.0",
+    "lucide-react-native": "^0.541.0",
     "nativewind": "^4.1.23",
     "pg": "^8.16.3",
     "react": "19.0.0",
