--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "vibe-lynx",
-    "slug": "vibe-lynx",
+    "name": "vibelynx",
+    "slug": "vibelynx",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
