--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@rn-primitives/accordion": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
     "@rn-primitives/switch": "^1.2.0",
+    "@vibelynx/vibelynx-js": "v0.1.4",
     "better-auth": "^1.3.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
