--- a/.gitignore
+++ b/.gitignore
@@ -31,10 +31,13 @@ yarn-error.*
 *.pem
 
 # local env files
-.env
 .env*.local
 
 # typescript
 *.tsbuildinfo
 
 app-example
+
+# generated native folders
+/ios
+/android
